# prospector

./: .coveragerc  .env  .flake8  .gitignore  .landscape.yaml  .landscape.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prospector.yaml  .prospector.yml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.rst  CONTRIBUTORS.md  CONTRIBUTORS.rst  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  ci.yml  codeql-analysis.yml  codespell.yml  lint_python.yml  pre-commit.yaml  release.yml  tests.yml
docs/: Makefile  changelog.rst  conf.py  contents.rst  contrib.rst  index.rst  pre-commit.rst  profiles.rst  reference.rst  requirements.txt  strictness.rst  supported_tools.rst  suppression.rst  usage.rst
docs/_build/doctrees/: contrib.doctree  environment.pickle  features.doctree  index.doctree  profiles.doctree  strictness.doctree  supported_tools.doctree  usage.doctree
docs/_build/html/: .buildinfo  contrib.html  features.html  genindex.html  index.html  objects.inv  profiles.html  search.html  searchindex.js  strictness.html  supported_tools.html  usage.html
docs/_build/html/_sources/: features.txt  index.txt  profiles.txt
docs/_templates/: globaltoc.html  layout.html  links.html  relations.html  sidebarintro.html  slim_searchbox.html
prospector/: __main__.py  __pkginfo__.py  _finder.py  args.py  autodetect.py  blender.py  blender_combinations.yaml  compat.py  config.py  dependency_detection.py  encoding.py  exceptions.py  finder.py  identify.py  linter.py  message.py  pathutils.py  postfilter.py  run.py  suppression.py
prospector/adaptor/: __init__.py  base.py  common.py  libraries.py  no_doc_warnings.py  profile.py  strictness.py
prospector/augmentations/: __init__.py
prospector/config/: __init__.py  configuration.py  datatype.py
prospector/formatters/: __init__.py  base.py  base_summary.py  emacs.py  gitlab.py  grouped.py  html.py  json.py  pylint.py  pylint_parseable.py  sarif.py  text.py  vscode.py  xunit.py  yaml.py
prospector/formatters/templates/: formatter.html
prospector/profiles/: __init__.py  base.py  celery.py  common.py  django.py  exceptions.py  no_doc_warnings.py  profile.py
prospector/profiles/profiles/: default.yaml  doc_warnings.yaml  flake8.yaml  full_pep8.yaml  full_pycodestyle.yaml  member_warnings.yaml  no_doc_warnings.yaml  no_member_warnings.yaml  no_pep8.yaml  no_pycodestyle.yaml  no_test_warnings.yaml  strictness_high.yaml  strictness_low.yaml  strictness_medium.yaml  strictness_none.yaml  strictness_veryhigh.yaml  strictness_verylow.yaml  test_warnings.yml
prospector/tests/: debug.py
prospector/tests/testmodules/: simple.py
prospector/tools/: __init__.py  base.py  exceptions.py  utils.py
prospector/tools/bandit/: __init__.py
prospector/tools/dodgy/: __init__.py
prospector/tools/frosted/: __init__.py
prospector/tools/mccabe/: __init__.py
prospector/tools/mypy/: __init__.py
prospector/tools/pep257/: __init__.py
prospector/tools/pep8/: __init__.py
prospector/tools/profile_validator/: __init__.py
prospector/tools/pycodestyle/: __init__.py
prospector/tools/pydocstyle/: __init__.py
prospector/tools/pyflakes/: __init__.py
prospector/tools/pylint/: __init__.py  collector.py  indent_checker.py  linter.py
prospector/tools/pyright/: __init__.py
prospector/tools/pyroma/: __init__.py
prospector/tools/ruff/: __init__.py
prospector/tools/vulture/: __init__.py
runConfigurations/: toolbag prospector.run.xml
tests/: test_autodetect.py  test_blender.py  test_dependency_detection.py  test_formatter_types.py  test_message.py  utils.py
tests/_finder/: test_file_finder.py
tests/config/: test_config.py  test_datatype.py
tests/config/.prospector/: prospector-int-ignores.yaml  prospector-str-ignores.yaml
tests/config/testdata/test_relative_ignores/: profile_relative_ignores.yml  something.py
tests/dependency_tests/test1/: requirements.txt
tests/dependency_tests/test2/requirements/: base.txt  webui.txt
tests/dependency_tests/test3/: pip_requirements.txt  reqs.txt  requirements_base.txt  requirements_test.txt  test_requirements.txt
tests/dependency_tests/test4/: callable.py  in_file.py  simple.py  tuple.py
tests/encoding/: test_encoding_detection.py
tests/execution/: __init__.py  test_execution.py
tests/execution/testdata/ignore_test/: profile.yml
tests/execution/testdata/something/: .prospector.yaml
tests/finder/: test_execution.py  test_file_finder.py  test_filefinder.py  test_pathutils.py  utils.py
tests/finder/testdata/dirs_mods_packages/: plain.txt
tests/formatters/: test_formatter_types.py
tests/is_python/: scrypt_py2  test_is_python_module.py
tests/profiles/: test_profile.py
tests/profiles/profiles/: empty_disable_list.yaml  enabled_disabled.yaml  ignores.yaml  inherittest-module-file.yaml  inherittest-module.yaml  inherittest1.yaml  inherittest2.yaml  inherittest3.yaml  mergeoptions.yaml  mergetest1.yaml  mergetest2.yaml  mergetest3.yaml  pep8_and_pylint_disabled.yaml  pep8_shorthand_pycodestyle.yaml  pycodestyle_and_pylint_disabled.yaml  pydocstyle_and_pylint_disabled.yaml  pylint_disabled.yaml  pylint_load_plugins.yaml  renaming_newname.yaml  simple.yaml
tests/profiles/profiles/renaming_pepX/: README.txt  renaming_oldname.yaml
tests/prospector-profile-test/: pyproject.toml
tests/prospector-profile-test/prospector_profile_test/: alternate.yaml  prospector.yaml
tests/suppression/: test_blender_suppression.py  test_suppression.py
tests/tools/: test_pep8.py  test_pylint_tool.py  utils.py
tests/tools/bandit/: test_bandit_tool.py  test_ruff_tool.py
tests/tools/mypy/: test_mypy_tool.py
tests/tools/pep8/: test_pep8_tool.py
tests/tools/pycodestyle/: test_pep8_tool.py  test_pycodestyle_tool.py
tests/tools/pylint/: test_pylint_tool.py
tests/tools/pyright/: test_pyright_tool.py
tests/tools/pyroma/: test_pyroma_tool.py
tests/tools/vulture/: test_vulture_tool.py
(+68 files in other folders)
