[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core>=2" ]

[project]
name = "prospector"
version = "1.18.0"
description = "Prospector is a tool to analyse Python code by aggregating the result of other tools."
readme = "README.rst"
keywords = [ "prospector", "pylint", "static code analysis" ]
license = "GPLv2+"
maintainers = [
  { name = "Carl Crowder", email = "git@carlcrowder.com" },
  { name = "Carlos Coelho", email = "carlospecter@gmail.com" },
  { name = "Pierre Sassoulas", email = "pierre.sassoulas@gmail.com" },
  { name = "Stéphane Brunner", email = "stephane.brunner@gmail.com" },
]
authors = [
  { name = "Carl Crowder", email = "git@carlcrowder.com" },
]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Quality Assurance",
]
dynamic = [ "dependencies" ]
optional-dependencies.with-bandit = [ "bandit" ]
optional-dependencies.with-everything = [ "bandit", "mypy", "pyright", "pyroma", "ruff", "vulture" ]
optional-dependencies.with-mypy = [ "mypy" ]
optional-dependencies.with-pyright = [ "pyright" ]
optional-dependencies.with-pyroma = [ "pyroma" ]
optional-dependencies.with-ruff = [ "ruff" ]
optional-dependencies.with-vulture = [ "vulture" ]
urls."Bug Tracker" = "https://github.com/prospector-dev/prospector/issues"
urls."homepage" = "http://prospector.readthedocs.io"
urls."repository" = "https://github.com/prospector-dev/prospector"
scripts.prospector = "prospector.run:main"

[tool.poetry]
# The format is a workaround aganst https://github.com/python-poetry/poetry/issues/9961
packages = [
  { include = "prospector/", format = [ "sdist" ] },
]
include = [
  "prospector/blender_combinations.yaml",
  "prospector/profiles/profiles/*.yaml",
]
dependencies.python = ">=3.10,<4.0"
dependencies.pylint = ">=4.0"
dependencies.pylint-celery = "0.3"
dependencies.pylint-django = ">=2.6.1"
dependencies.requirements-detector = ">=1.5.0"
dependencies.PyYAML = "*"
dependencies.mccabe = "^0.7.0"
dependencies.pyflakes = ">=2.2.0"
dependencies.pycodestyle = ">=2.9.0"
dependencies.pep8-naming = ">=0.3.3,<=0.10.0"
dependencies.pydocstyle = ">=2.0.0"
dependencies.dodgy = "^0.2.1"
dependencies.toml = "^0.10.2"
dependencies.setoptconf-tmp = "^0.3.1"
dependencies.packaging = "*"
dependencies.bandit = { version = ">=1.5.1", optional = true }
dependencies.vulture = { version = ">=1.5", optional = true }
dependencies.mypy = { version = ">=0.600", optional = true }
dependencies.pyright = { version = ">=1.1.3", optional = true }
dependencies.pyroma = { version = ">=2.4", optional = true }
dependencies.ruff = { version = "*", optional = true }
group.dev.dependencies.coveralls = "^3.3.1"
group.dev.dependencies.pytest = "^7.2.0"
group.dev.dependencies.pytest-benchmark = "^4.0.0"
group.dev.dependencies.pytest-cov = "^4.0.0"
group.dev.dependencies.tzlocal = "^4.2"
group.dev.dependencies.coverage = "^6.5"
group.dev.dependencies.pre-commit = "^4.2.0"
group.dev.dependencies.tox = "^3.27.1"
group.dev.dependencies.twine = "^6.2.0"
group.dev.dependencies.types-PyYAML = "^6.0.4"

[tool.ruff]
target-version = "py39"
line-length = 120
lint.extend-select = [
  "B",    # flake8-bugbear
  # pydocstyle
  "D213",
  "D214",
  "D215",
  "D405",
  "D406",
  "D407",
  "D408",
  "D409",
  "D410",
  "D411",
  "D413",
  "D416",
  "D417",
  "E",
  "F",    # Pyflakes
  "I",    # isort
  "PT",   # flake8-pytest-style
  "S",    # flake8-bandit
  "SIM",  # flake8-simplify
  "UP",   # pyupgrade
  "W",    # Pycodestyle
]
lint.ignore = [
  "S101",   # Use of assert detected
  "SIM105", # suppressible-exception (slow code)
]
lint.fixable = [ "ALL" ]
