[project]
name = "prospector-profile-test"
version = "0.0.0"

description = "A package used to test the prospector external profile"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[tool.setuptools.package-data]
prospector_profile_test = [ "*.yaml" ]
